--- a/1.html
+++ b/1.html
@@ -16,8 +16,8 @@
      is the standard Markup language for <strong>creating <u>web</u> pages</strong> and web applications.
   This HTML usage data comes from 11.3 million index pages gathered from top twenty Google results, for about 30 million keywords - chosen by keyword volume.</p><p>
   To learn more about this data, visit the FAQ section.
-  <img src="coding.jpg" width="100%">
-  </p><p>The doctype is the very first line of a HTML document and it specifies
+  <img src="coding.jpg" width="100%"></p>
+  <p>The doctype is the very first line of a HTML document and it specifies
   which version of (X)HTML that page is using.</p>
 </body>
 </html>
